# Pascal

./: CMakeLists.txt  README.md  main.cpp
core/: Core.cpp  Core.h  Processor.cpp  Processor.h
debug/: Printer.cpp  Printer.h
error/: Error.cpp  Error.h
lex/: Lexer.cpp  Lexer.h  Source.cpp  Source.h  Token.cpp  Token.h
optimize/: Optimizer.cpp  Optimizer.h
parse/: Parser.cpp  Parser.h
resolve/: Resolver.cpp  Resolver.h
tree/: Declaration.h  Expression.h  Statement.h  Tree.h
